--- a/lab_exercise.ipynb
+++ b/lab_exercise.ipynb
@@ -9,18 +9,18 @@
     "import random\n",
     "\n",
     "MIN = 1\n",
-    "MAX = 7\n",
+    "MAX = 10\n",
     "\n",
     "\n",
     "def within_range(x, min_bound, max_bound):\n",
     "    return min_bound <= x and x <= max_bound\n",
     "\n",
     "def a_simple_program(name):\n",
-    "    topics = [\"food\", \"color\", \"tv show\", \"video game\", \"season\", \"holiday\", \"number\"]\n",
+    "    topics = [\"food\", \"color\", \"tv show\", \"video game\", \"season\", \"holiday\", \"number\", \"book\", \"sport\", \"movie\"]\n",
     "    response = input(\"Pick a random number between {} and {}\".format(MIN, MAX))\n",
     "    \n",
     "    while (response.isdigit() == False or within_range(int(response), MIN, MAX) == False):\n",
-    "        response = input(\"Pick a random number from 1 to 7\")\n",
+    "        response = input(\"Pick a random number from 1 to 10: \")\n",
     "    \n",
     "    random.shuffle(topics)\n",
     "    topic = topics[int(response) - 1]\n",
@@ -29,7 +29,7 @@
     "    \n",
     "\n",
     "\n",
-    "name = input(\"Enter the user's name: \")                            \n",
+    "name = input(\"Enter the your name: \")                            \n",
     "a_simple_program(name)"
    ]
   }
@@ -56,3 +56,4 @@
  "nbformat": 4,
  "nbformat_minor": 4
 }
+
